# bronx

./: CONTRIBUTING.md  README.md  __init__.py  pyproject.toml
compat/: functools.py  itertools.py  moves.py
datagrip/: datastore.py  namelist.py  netcdf.py  pyexttiff.py  varbc.py  varbcheaders.py
docs/: conf.py  index.rst
fancies/: __init__.py  arguments.py  colors.py  dispatch.py  display.py  loggers.py  multicfg.py  wrapcmd.py
graphics/: __init__.py  axes.py  colormapping.py
io/: __init__.py  misc.py
meteo/: __init__.py  constants.py  conversion.py  thermo.py
patterns/: __init__.py  getbytag.py  observer.py
stdtypes/: __init__.py  date.py  dictionaries.py  history.py  tracking.py  xtemplates.py
syntax/: __init__.py  arrays.py  decorators.py  externalcode.py  iterators.py  parsing.py  pretty.py
system/: __init__.py  cpus.py  hash.py  interrupt.py  mem_tool.py  memory.py  mf.py  numa.py  unistd.py
tests/: test_compat_functools.py  test_compat_itertools.py  test_compat_random.py  test_datagrip_datastore.py  test_datagrip_misc.py  test_datagrip_namelist.py  test_datagrip_varbc.py  test_doctests.py  test_fancies_display.py  test_fancies_dump.py  test_fancies_loggers.py  test_net_netrc.py  test_patterns_getbytag.py  test_patterns_observer.py  test_stdtypes_catalog.py  test_stdtypes_date.py  test_stdtypes_dictionaries.py  test_stdtypes_xtemplates.py  test_syntax.py  test_syntax_externalcode.py  test_syntax_minieval.py  test_syntax_parsing.py  test_syntax_pretty.py  test_system_cpus.py  test_system_hash.py  test_system_interrupt.py  test_system_memory.py  (+1 more)
(+67 files in other folders)
